# HaraliCU

./: .gitignore  CMakeLists.txt
CPU/src/: ImageFeatureComputer.h  ImageLoader.h
GPU/src/: CudaFunctions.cu  CudaFunctions.h  FeatureComputer.cu  FeatureComputer.h  GLCM.h  GrayPair.h  ImageFeatureComputer.cu  ImageFeatureComputer.h  ImageLoader.cpp  ImageLoader.h  ProgramArguments.cpp  ProgramArguments.h  Utils.cpp  Utils.h  getopt.c  main.cpp
